fix: input color on dark mode

--- a/src/styles/contact.styl
+++ b/src/styles/contact.styl
@@ -32,7 +32,7 @@
         box-sizing border-box
         font-size 16px
         line-height 22px
-        getColor(theme, color)
+        color #1a202c
         background-color #f5f8fa
         border 1px solid #cbd6e2
         border-radius 4px
